--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "engines": {
+  "node": "20.11.1"
+},
   
   "eslintConfig": {
     "extends": [
